# ANN_Small

./: CMakeLists.txt  MNIS.h  MNIST.c  NN.c  NN.h  NN_W.c  NN_W.h  README.md  main.c
